--- a/index_mobile.html
+++ b/index_mobile.html
@@ -254,8 +254,8 @@ body.sort-mode .sort-handle{display:block;}
 .rec-user{font-size:9px;color:var(--purple);font-family:'Share Tech Mono',monospace;margin-top:1px;}
 .rec-dur{font-family:'Share Tech Mono',monospace;font-size:14px;color:var(--orange);font-weight:700;white-space:nowrap;min-width:70px;text-align:right;}
 .rec-wrap{position:relative;overflow:hidden;border-bottom:1px solid var(--border);}
-.rec-del-bg{position:absolute;inset:0;background:var(--red);display:flex;align-items:center;justify-content:flex-end;padding-right:20px;opacity:0;pointer-events:none;transition:opacity .15s;}
-.rec-del-bg.show{opacity:1;pointer-events:all;}
+.rec-del-bg{position:absolute;inset:0;background:var(--red);display:flex;align-items:center;justify-content:flex-end;padding-right:24px;opacity:0;pointer-events:none;}
+.rec-del-bg.show{pointer-events:all;}
 .rec-del-bg span{color:#fff;font-family:'Rajdhani',sans-serif;font-size:14px;font-weight:700;letter-spacing:2px;cursor:pointer;}
 .rec-row{display:flex;align-items:center;padding:10px 12px;gap:10px;position:relative;background:var(--bg);transition:transform .2s ease,background .2s;}
 .rec-row.swiped{background:rgba(255,51,85,.08);}
@@ -1277,52 +1277,83 @@ async function openHistory(){
 function closeHistory(){ document.getElementById('histScreen').classList.remove('show'); }
 function getFilteredLog(){ const f=document.getElementById('filterSelect').value; return f?logEntries.filter(r=>r.card_name===f):[...logEntries]; }
 function attachSwipeDelete(wrap, row, delBg, entryId){
-  let startX=0, startY=0, dx=0, swiped=false, moving=false;
-  const THRESHOLD=80;
+  let x0=null, y0=null, locked=null, swiped=false;
+  const DEL_W = 100; // larghezza rivelata del tasto elimina
 
-  function onStart(x,y){ startX=x; startY=y; dx=0; moving=false; swiped=false; }
-  function onMove(x,y){
-    dx=x-startX;
-    const dy=Math.abs(y-startY);
-    if(!moving && dy>10 && Math.abs(dx)<dy) return; // scroll verticale
-    moving=true;
-    if(dx<0){ // swipe a sinistra
-      const shift=Math.min(Math.abs(dx),140);
-      row.style.transform='translateX(-'+shift+'px)';
-      if(shift>THRESHOLD){ delBg.classList.add('show'); row.classList.add('swiped'); swiped=true; }
-      else { delBg.classList.remove('show'); row.classList.remove('swiped'); swiped=false; }
+  row.addEventListener('touchstart', e=>{
+    x0 = e.touches[0].clientX;
+    y0 = e.touches[0].clientY;
+    locked = null;
+    row.style.transition = 'none';
+  }, {passive:true});
+
+  row.addEventListener('touchmove', e=>{
+    if(x0===null) return;
+    const dx = e.touches[0].clientX - x0;
+    const dy = e.touches[0].clientY - y0;
+
+    // Determina direzione appena chiara
+    if(locked===null){
+      if(Math.abs(dx)<5 && Math.abs(dy)<5) return;
+      locked = Math.abs(dx) >= Math.abs(dy) ? 'h' : 'v';
     }
-  }
-  function onEnd(){
-    if(!moving) return;
-    if(swiped){
-      row.style.transform='translateX(-120px)';
+    if(locked==='v') return; // lascia scorrere verticalmente
+
+    e.preventDefault(); // blocca scroll solo se orizzontale
+
+    if(dx < 0){
+      const shift = Math.min(Math.abs(dx), DEL_W);
+      row.style.transform = 'translateX(-'+shift+'px)';
+      delBg.style.opacity = String(shift/DEL_W);
+    } else if(swiped && dx > 0){
+      const shift = Math.max(DEL_W - dx, 0);
+      row.style.transform = 'translateX(-'+shift+'px)';
+      delBg.style.opacity = String(shift/DEL_W);
+    }
+  }, {passive:false});
+
+  row.addEventListener('touchend', e=>{
+    if(locked!=='h'){ x0=null; return; }
+    const dx = e.changedTouches[0].clientX - x0;
+    row.style.transition = 'transform .2s ease';
+    delBg.style.transition = 'opacity .2s ease';
+
+    if(!swiped && dx < -(DEL_W*0.5)){
+      // apri
+      swiped = true;
+      row.style.transform = 'translateX(-'+DEL_W+'px)';
+      delBg.style.opacity = '1';
       delBg.classList.add('show');
     } else {
-      row.style.transform='';
+      // chiudi
+      swiped = false;
+      row.style.transform = '';
+      delBg.style.opacity = '0';
       delBg.classList.remove('show');
       row.classList.remove('swiped');
     }
-  }
+    x0=null;
+  }, {passive:true});
 
-  row.addEventListener('touchstart',e=>{const t=e.touches[0];onStart(t.clientX,t.clientY);},{passive:true});
-  row.addEventListener('touchmove',e=>{if(moving)e.preventDefault();const t=e.touches[0];onMove(t.clientX,t.clientY);},{passive:false});
-  row.addEventListener('touchend',()=>onEnd(),{passive:true});
-
-  // Click fuori annulla lo swipe
-  document.addEventListener('touchstart',e=>{
+  // Tap fuori chiude
+  document.addEventListener('touchstart', e=>{
     if(swiped && !wrap.contains(e.target)){
-      row.style.transform=''; delBg.classList.remove('show'); row.classList.remove('swiped'); swiped=false;
+      swiped=false;
+      row.style.transition='transform .2s ease';
+      row.style.transform='';
+      delBg.style.opacity='0';
+      delBg.classList.remove('show');
     }
-  },{passive:true});
+  }, {passive:true});
 
-  // Bottone ELIMINA
+  // Tasto ELIMINA
   delBg.querySelector('span').addEventListener('click', async()=>{
     try{
       const {error}=await sb.from('log_entries').delete().eq('id',entryId);
       if(error) throw error;
-      wrap.style.transition='opacity .2s'; wrap.style.opacity='0';
-      setTimeout(()=>{ wrap.remove(); loadLog(); renderHistory(); },200);
+      wrap.style.transition='opacity .25s';
+      wrap.style.opacity='0';
+      setTimeout(()=>{ wrap.remove(); loadLog(); renderHistory(); },250);
       toast('Rilevazione eliminata');
     }catch(e){ toast('⚠ '+e.message); }
   });
