--- a/index_mobile.html
+++ b/index_mobile.html
@@ -253,7 +253,7 @@ body.sort-mode .sort-handle{display:block;}
 .rec-time{font-family:'Share Tech Mono',monospace;font-size:10px;color:var(--dim);white-space:nowrap;line-height:1.7;}
 .rec-user{font-size:9px;color:var(--purple);font-family:'Share Tech Mono',monospace;margin-top:1px;}
 .rec-dur{font-family:'Share Tech Mono',monospace;font-size:14px;color:var(--orange);font-weight:700;white-space:nowrap;min-width:70px;text-align:right;}
-.rec-wrap{position:relative;overflow:hidden;border-bottom:1px solid var(--border);}
+.rec-wrap{position:relative;overflow:hidden;border-bottom:1px solid var(--border);touch-action:pan-y;user-select:none;}
 .rec-del-bg{position:absolute;inset:0;background:var(--red);display:flex;align-items:center;justify-content:flex-end;padding-right:24px;opacity:0;pointer-events:none;}
 .rec-del-bg.show{pointer-events:all;}
 .rec-del-bg span{color:#fff;font-family:'Rajdhani',sans-serif;font-size:14px;font-weight:700;letter-spacing:2px;cursor:pointer;}
@@ -1277,66 +1277,61 @@ async function openHistory(){
 function closeHistory(){ document.getElementById('histScreen').classList.remove('show'); }
 function getFilteredLog(){ const f=document.getElementById('filterSelect').value; return f?logEntries.filter(r=>r.card_name===f):[...logEntries]; }
 function attachSwipeDelete(wrap, row, delBg, entryId){
-  let x0=null, y0=null, locked=null, swiped=false;
-  const DEL_W = 100; // larghezza rivelata del tasto elimina
+  const DEL_W = 110;
+  let px=0, py=0, active=false, dir=null, swiped=false;
 
-  row.addEventListener('touchstart', e=>{
-    x0 = e.touches[0].clientX;
-    y0 = e.touches[0].clientY;
-    locked = null;
-    row.style.transition = 'none';
-  }, {passive:true});
+  wrap.addEventListener('pointerdown', e=>{
+    px=e.clientX; py=e.clientY; active=true; dir=null;
+    wrap.setPointerCapture(e.pointerId);
+    row.style.transition='none';
+  });
 
-  row.addEventListener('touchmove', e=>{
-    if(x0===null) return;
-    const dx = e.touches[0].clientX - x0;
-    const dy = e.touches[0].clientY - y0;
-
-    // Determina direzione appena chiara
-    if(locked===null){
-      if(Math.abs(dx)<5 && Math.abs(dy)<5) return;
-      locked = Math.abs(dx) >= Math.abs(dy) ? 'h' : 'v';
+  wrap.addEventListener('pointermove', e=>{
+    if(!active) return;
+    const dx=e.clientX-px, dy=e.clientY-py;
+    if(dir===null){
+      if(Math.abs(dx)<6 && Math.abs(dy)<6) return;
+      dir = Math.abs(dx)>Math.abs(dy) ? 'h' : 'v';
     }
-    if(locked==='v') return; // lascia scorrere verticalmente
+    if(dir==='v') return;
+    e.preventDefault();
+    let shift;
+    if(!swiped) shift=Math.max(0, Math.min(-dx, DEL_W));
+    else shift=Math.max(0, Math.min(DEL_W+(-dx>0?-dx:0), DEL_W));
+    if(dx>0 && swiped) shift=Math.max(0,DEL_W-Math.abs(dx));
+    row.style.transform='translateX(-'+shift+'px)';
+    delBg.style.opacity=String((shift/DEL_W).toFixed(2));
+  });
 
-    e.preventDefault(); // blocca scroll solo se orizzontale
-
-    if(dx < 0){
-      const shift = Math.min(Math.abs(dx), DEL_W);
-      row.style.transform = 'translateX(-'+shift+'px)';
-      delBg.style.opacity = String(shift/DEL_W);
-    } else if(swiped && dx > 0){
-      const shift = Math.max(DEL_W - dx, 0);
-      row.style.transform = 'translateX(-'+shift+'px)';
-      delBg.style.opacity = String(shift/DEL_W);
-    }
-  }, {passive:false});
-
-  row.addEventListener('touchend', e=>{
-    if(locked!=='h'){ x0=null; return; }
-    const dx = e.changedTouches[0].clientX - x0;
-    row.style.transition = 'transform .2s ease';
-    delBg.style.transition = 'opacity .2s ease';
-
-    if(!swiped && dx < -(DEL_W*0.5)){
-      // apri
-      swiped = true;
-      row.style.transform = 'translateX(-'+DEL_W+'px)';
-      delBg.style.opacity = '1';
+  wrap.addEventListener('pointerup', e=>{
+    if(!active) return; active=false;
+    if(dir!=='h'){ return; }
+    const dx=e.clientX-px;
+    row.style.transition='transform .25s ease';
+    delBg.style.transition='opacity .25s ease';
+    if(!swiped && dx < -(DEL_W*0.45)){
+      swiped=true;
+      row.style.transform='translateX(-'+DEL_W+'px)';
+      delBg.style.opacity='1';
       delBg.classList.add('show');
     } else {
-      // chiudi
-      swiped = false;
-      row.style.transform = '';
-      delBg.style.opacity = '0';
+      swiped=false;
+      row.style.transform='';
+      delBg.style.opacity='0';
       delBg.classList.remove('show');
-      row.classList.remove('swiped');
     }
-    x0=null;
-  }, {passive:true});
+  });
 
-  // Tap fuori chiude
-  document.addEventListener('touchstart', e=>{
+  wrap.addEventListener('pointercancel', ()=>{
+    active=false;
+    row.style.transition='transform .25s ease';
+    row.style.transform='';
+    delBg.style.opacity='0';
+    delBg.classList.remove('show');
+    swiped=false;
+  });
+
+  document.addEventListener('pointerdown', e=>{
     if(swiped && !wrap.contains(e.target)){
       swiped=false;
       row.style.transition='transform .2s ease';
@@ -1344,18 +1339,18 @@ function attachSwipeDelete(wrap, row, delBg, entryId){
       delBg.style.opacity='0';
       delBg.classList.remove('show');
     }
-  }, {passive:true});
+  });
 
-  // Tasto ELIMINA
-  delBg.querySelector('span').addEventListener('click', async()=>{
+  delBg.querySelector('span').addEventListener('click', async e=>{
+    e.stopPropagation();
     try{
       const {error}=await sb.from('log_entries').delete().eq('id',entryId);
       if(error) throw error;
       wrap.style.transition='opacity .25s';
       wrap.style.opacity='0';
-      setTimeout(()=>{ wrap.remove(); loadLog(); renderHistory(); },250);
+      setTimeout(()=>{ wrap.remove(); loadLog(); renderHistory(); },260);
       toast('Rilevazione eliminata');
-    }catch(e){ toast('⚠ '+e.message); }
+    }catch(err){ toast('⚠ '+err.message); }
   });
 }
 
